fixd the login problem and made the api for verlof
