# storage/api-docs/api-docs.json
@@ -36,7 +36,7 @@
                                     },
                                     "email": {
                                         "type": "string",
-                                        "example": "loek2@loek.nl"
+                                        "example": "loek@loek.nl"
                                     },
                                     "password": {
                                         "type": "string",
@@ -98,7 +98,7 @@
                                 "properties": {
                                     "email": {
                                         "type": "string",
-                                        "example": "loek1@loek.nl"
+                                        "example": "loek@loek.nl"
                                     },
                                     "password": {
                                         "type": "string",
@@ -182,13 +182,156 @@
                     }
                 ]
             }
+        },
+        "/verlof/beoordeling": {
+            "get": {
+                "tags": [
+                    "Verlof"
+                ],
+                "summary": "Alle verlofaanvragen ophalen voor beoordeling",
+                "operationId": "3f6bfe5977392d35adc626ebe37d3a5b",
+                "responses": {
+                    "200": {
+                        "description": "Lijst van aanvragen"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/verlof/beoordeling/{aanvraag}/accept": {
+            "post": {
+                "tags": [
+                    "Verlof"
+                ],
+                "summary": "Accepteer een verlofaanvraag",
+                "operationId": "f8ba78118190164e2b5e075c004b0e75",
+                "parameters": [
+                    {
+                        "name": "aanvraag",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Succesvol geaccepteerd"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/verlof/beoordeling/{aanvraag}/reject": {
+            "post": {
+                "tags": [
+                    "Verlof"
+                ],
+                "summary": "Verlofaanvraag afwijzen",
+                "operationId": "390513ce98fc74003604f91a2bc4cfc5",
+                "parameters": [
+                    {
+                        "name": "aanvraag",
+                        "in": "path",
+                        "description": "ID van de verlofaanvraag",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Verlofaanvraag afgewezen"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/verlof/aanvragen": {
+            "post": {
+                "tags": [
+                    "Verlof"
+                ],
+                "summary": "Verlof aanvragen indienen",
+                "operationId": "c9f1a461123e0194f58934cb37f0dfc8",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "verlof_type_id",
+                                    "start_datum",
+                                    "eind_datum",
+                                    "reden"
+                                ],
+                                "properties": {
+                                    "verlof_type_id": {
+                                        "type": "integer"
+                                    },
+                                    "start_datum": {
+                                        "type": "string",
+                                        "format": "date"
+                                    },
+                                    "eind_datum": {
+                                        "type": "string",
+                                        "format": "date"
+                                    },
+                                    "reden": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Verlofaanvraag succesvol ingediend"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
         "securitySchemes": {
             "bearerAuth": {
                 "type": "http",
-                "bearerFormat": "JWT",
+                "description": "Bearer token voor authenticatie",
+                "name": "Authorization",
+                "in": "header",
                 "scheme": "bearer"
             }
         }
@@ -197,6 +340,10 @@
         {
             "name": "Auth",
             "description": "Auth"
+        },
+        {
+            "name": "Verlof",
+            "description": "Verlof"
         }
     ]
 }
